move and throttle

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend Hour</title>
-    <script src="./function-composition.js"></script>
   </head>
   <body>
-    <h1>function-composition</h1>
+    <h1>Move Emoji</h1>
+    <p class="move-emoji">😀🤘</p>
+    <input type="text" onkeyup="keyUpEvent(event)" />
   </body>
+  <script src="./move-element.js"></script>
+  <script src="./throttle.js"></script>
 </html>
