Debounce and Promisify

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <p class="move-emoji">😀🤘</p>
     <input type="text" onkeyup="keyUpEvent(event)" />
   </body>
-  <script src="./move-element.js"></script>
-  <script src="./throttle.js"></script>
+  <!-- <script src="./move-element.js"></script>
+  <!-- <script src="./throttle.js"></script> -->
+  <script src="./promisfy.js"></script>
+  <!-- <script src="./debounce.js"></script> -->
 </html>
