shared numbers problem

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <title>Frontend Hour</title>
   </head>
   <body>
-    <h1>Move Emoji</h1>
+    <h1>Shared Numbers Problem</h1>
     <p class="move-emoji">😀🤘</p>
     <input type="text" onkeyup="keyUpEvent(event)" />
   </body>
-  <!-- <script src="./move-element.js"></script>
+  <!-- <script src="./move-element.js"></script> -->
   <!-- <script src="./throttle.js"></script> -->
-  <script src="./promisfy.js"></script>
+  <!-- <script src="./promisfy.js"></script> -->
   <!-- <script src="./debounce.js"></script> -->
+  <script src="./shared-number.js"></script>
 </html>
