Destructuring and GetByPath

--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <title>Frontend Hour</title>
   </head>
   <body>
-    <h1>Shared Numbers Problem</h1>
-    <p class="move-emoji">😀🤘</p>
-    <input type="text" onkeyup="keyUpEvent(event)" />
+    <h1>ES6 Destructuring</h1>
+    <!-- <p class="move-emoji">😀🤘</p>
+    <input type="text" onkeyup="keyUpEvent(event)" /> -->
   </body>
   <!-- <script src="./move-element.js"></script> -->
   <!-- <script src="./throttle.js"></script> -->
   <!-- <script src="./promisfy.js"></script> -->
   <!-- <script src="./debounce.js"></script> -->
-  <script src="./shared-number.js"></script>
+  <!-- <script src="./shared-number.js"></script> -->
+  <!-- <script src="./destructuring.js"></script> -->
+  <script src="./get-by-path.js"></script>
 </html>
