moved destructing to corresponding folder

--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@
   <!-- <script src="./debounce.js"></script> -->
   <!-- <script src="./shared-number.js"></script> -->
   <!-- <script src="./destructuring.js"></script> -->
-  <script src="./get-by-path.js"></script>
+  <script src="./problems/get-by-path.js"></script>
 </html>
