--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   </head>
   <body>
     <h1>ES6 Destructuring</h1>
-    <!-- <p class="move-emoji">😀🤘</p>
-    <input type="text" onkeyup="keyUpEvent(event)" /> -->
+    <!-- <p class="move-emoji">😀🤘</p> -->
+    <input type="text" onkeyup="keyUpEvent(event)" />
   </body>
   <!-- <script src="./move-element.js"></script> -->
-  <!-- <script src="./throttle.js"></script> -->
+  <script src="./throttle.js"></script>
   <!-- <script src="./promisfy.js"></script> -->
   <!-- <script src="./debounce.js"></script> -->
   <!-- <script src="./shared-number.js"></script> -->
   <!-- <script src="./destructuring.js"></script> -->
-  <script src="./problems/get-by-path.js"></script>
+  <!-- <script src="./problems/get-by-path.js"></script> -->
 </html>
