--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Frontend Hour</title>
   </head>
   <body>
-    <h1>ES6 Destructuring</h1>
+    <h1>Collections</h1>
     <!-- <p class="move-emoji">😀🤘</p>
     <input type="text" onkeyup="keyUpEvent(event)" /> -->
   </body>
@@ -16,5 +16,6 @@
   <!-- <script src="./debounce.js"></script> -->
   <!-- <script src="./shared-number.js"></script> -->
   <!-- <script src="./destructuring.js"></script> -->
-  <script src="./problems/get-by-path.js"></script>
+  <!-- <script src="./problems/get-by-path.js"></script> -->
+  <script src="./concepts/collections.js"></script>
 </html>
