--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Frontend Hour</title>
-  </head>
-  <body>
-    <h1>ES6 Destructuring</h1>
-    <!-- <p class="move-emoji">😀🤘</p> -->
-    <input type="text" onkeyup="keyUpEvent(event)" />
-  </body>
-  <!-- <script src="./move-element.js"></script> -->
-  <!-- <script src="./throttle.js"></script> -->
-  <!-- <script src="./promisfy.js"></script> -->
-  <!-- <script src="./debounce.js"></script> -->
-  <!-- <script src="./shared-number.js"></script> -->
-  <!-- <script src="./destructuring.js"></script> -->
-  <!-- <script src="./problems/get-by-path.js"></script> -->
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Frontend Hour</title>
+</head>
+
+<body>
+  <h1>Small Problems</h1>
+  <!-- <p class="move-emoji">😀🤘</p> -->
+  <!-- <input type="text" onkeyup="keyUpEvent(event)" /> -->
+</body>
+<!-- <script src="./move-element.js"></script> -->
+<!-- <script src="./throttle.js"></script> -->
+<!-- <script src="./promisfy.js"></script> -->
+<!-- <script src="./debounce.js"></script> -->
+<!-- <script src="./shared-number.js"></script> -->
+<!-- <script src="./destructuring.js"></script> -->
+<!-- <script src="./problems/get-by-path.js"></script> -->
+<script src="./problems/small-questions.js"></script>
+
 </html>
