--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <h1>Event Loop</h1>
+  <h1>Hoisting In JavaScript</h1>
   <!-- <p class="move-emoji">😀🤘</p> -->
   <!-- <input type="text" onkeyup="keyUpEvent(event)" /> -->
 </body>
@@ -20,6 +20,7 @@
 <!-- <script src="./destructuring.js"></script> -->
 <!-- <script src="./problems/get-by-path.js"></script> -->
 <!-- <script src="./problems/small-questions.js"></script> -->
-<script src="./concepts/event-loop.js"></script>
+<!-- <script src="./concepts/event-loop.js"></script> -->
+<script src="./concepts/hoisting.js"></script>
 
 </html>
