--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <!-- <script src="./problems/small-questions.js"></script> -->
 <!-- <script src="./concepts/event-loop.js"></script> -->
 <!-- <script src="./concepts/hoisting.js"></script> -->
-<script src="./concepts/temporal-dead-zone.js"></script>
+<!-- <script src="./concepts/temporal-dead-zone.js"></script> -->
+<script src="./algorithms/bubble-sort.js"></script>
 
 </html>
