--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 <!-- <script src="./concepts/event-loop.js"></script> -->
 <!-- <script src="./concepts/hoisting.js"></script> -->
 <!-- <script src="./concepts/temporal-dead-zone.js"></script> -->
-<script src="./algorithms/bubble-sort.js"></script>
+<!-- <script src="./algorithms/bubble-sort.js"></script> -->
+<!-- <script src="./algorithms/insertion-sort.js"></script> -->
+<script src="./algorithms/merge-sort.js"></script>
 
 </html>
