BST data structure with Insert and Contains method

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <h1>Temporal Dead Zone</h1>
+  <h1>Binary Search Tree</h1>
   <!-- <p class="move-emoji">😀🤘</p> -->
   <!-- <input type="text" onkeyup="keyUpEvent(event)" /> -->
 </body>
@@ -25,6 +25,7 @@
 <!-- <script src="./concepts/temporal-dead-zone.js"></script> -->
 <!-- <script src="./algorithms/bubble-sort.js"></script> -->
 <!-- <script src="./algorithms/insertion-sort.js"></script> -->
-<script src="./algorithms/merge-sort.js"></script>
+<!-- <script src="./algorithms/merge-sort.js"></script> -->
+<script src="./datastructures/bst.js"></script>
 
 </html>
