quick sort added

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <!-- <script src="./algorithms/bubble-sort.js"></script> -->
 <!-- <script src="./algorithms/insertion-sort.js"></script> -->
 <!-- <script src="./algorithms/merge-sort.js"></script> -->
-<script src="./datastructures/bst.js"></script>
+<!-- <script src="./datastructures/bst.js"></script> -->
+<script src="./algorithms/quick-sort.js"></script>
 
 </html>
