--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <h1>Binary Search Tree</h1>
+  <h1>Introduction to Design Patterns in JavaScript</h1>
   <!-- <p class="move-emoji">😀🤘</p> -->
   <!-- <input type="text" onkeyup="keyUpEvent(event)" /> -->
 </body>
