--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <h1>Introduction to Design Patterns in JavaScript</h1>
+  <h1>Currying</h1>
   <!-- <p class="move-emoji">😀🤘</p> -->
   <!-- <input type="text" onkeyup="keyUpEvent(event)" /> -->
 </body>
@@ -27,6 +27,9 @@
 <!-- <script src="./algorithms/insertion-sort.js"></script> -->
 <!-- <script src="./algorithms/merge-sort.js"></script> -->
 <!-- <script src="./datastructures/bst.js"></script> -->
-<script src="./algorithms/quick-sort.js"></script>
+<!-- <script src="./algorithms/quick-sort.js"></script> -->
+<script src="./concepts/currying.js"></script>
+<script src="./concepts/call-apply-bind.js"></script>
+<script src="./concepts/array-methods.js"></script>
 
 </html>
