Added promise and Array Flat

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 <script src="./concepts/call-apply-bind.js"></script>
 <script src="./concepts/array-methods.js"></script>
 <script src="./concepts/array-methods.js"></script> -->
-<script src="./concepts/promises.js"></script>
+<!-- <script src="./concepts/promises.js"></script> -->
+<script src="./problems/array-flat.js"></script>
 
 </html>
