bind polyfill html code

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 <!-- <script src="./algorithms/merge-sort.js"></script> -->
 <!-- <script src="./datastructures/bst.js"></script> -->
 <!-- <script src="./algorithms/quick-sort.js"></script> -->
-<script src="./concepts/currying.js"></script>
+<!-- <script src="./concepts/currying.js"></script>
 <script src="./concepts/call-apply-bind.js"></script>
-<script src="./concepts/array-methods.js"></script>
+<script src="./concepts/array-methods.js"></script> -->
+<script src="./concepts/bind-polyfil.js"></script>
 
 </html>
