Array unique values

--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
 <script src="./concepts/array-methods.js"></script> -->
 <!-- <script src="./concepts/bind-polyfil.js"></script> -->
 <!-- <script src="./concepts/promises.js"></script> -->
-<script src="./problems/array-flat.js"></script>
+<script src="./problems/array-uniqueValue.js"></script>
 
 </html>
