--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <h1>Promises</h1>
+  <h1>This keyword</h1>
   <!-- <p class="move-emoji">😀🤘</p> -->
   <!-- <input type="text" onkeyup="keyUpEvent(event)" /> -->
 </body>
@@ -33,6 +33,8 @@
 <script src="./concepts/array-methods.js"></script> -->
 <!-- <script src="./concepts/bind-polyfil.js"></script> -->
 <!-- <script src="./concepts/promises.js"></script> -->
-<script src="./problems/array-uniqueValue.js"></script>
+<!-- <script src="./problems/array-uniqueValue.js"></script> -->
+<!-- <script src="./problems/longest-string.js"></script> -->
+<script src="./problems/this-keyword.js"></script>
 
 </html>
