Number Pair Problems

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <!-- <script src="./concepts/promises.js"></script> -->
 <!-- <script src="./problems/array-uniqueValue.js"></script> -->
 <!-- <script src="./problems/longest-string.js"></script> -->
-<script src="./problems/this-keyword.js"></script>
+<!-- <script src="./problems/this-keyword.js"></script> -->
+<script src="./problems/number-pairs.js"></script>
 
 </html>
