--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 <!-- <script src="./problems/array-uniqueValue.js"></script> -->
 <!-- <script src="./problems/longest-string.js"></script> -->
 <!-- <script src="./problems/this-keyword.js"></script> -->
-<script src="./problems/number-pairs.js"></script>
+<!-- <script src="./problems/number-pairs.js"></script> -->
+<script src="./problems/practice/stringPermutation.js"></script>
 
 </html>
