longest substring bug fix

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
 <!-- <script src="./problems/longest-string.js"></script> -->
 <!-- <script src="./problems/this-keyword.js"></script> -->
 <!-- <script src="./problems/number-pairs.js"></script> -->
-<script src="./problems/practice/stringPermutation.js"></script>
+<!-- <script src="./problems/practice/stringPermutation.js"></script> -->
+<!-- <script src="./problems/practice/sumAndProductOfNumbers.js"></script> -->
+<!-- <script src="./problems/practice/pascalTriangle.js"></script> -->
+<!-- <script src="./problems/practice/smallestSubString.js"></script> -->
+<script src="./problems/practice/longestCommonSubstring.js"></script>
 
 </html>
