Array Circular roataion

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
   <script src="code-challenges/array-partation.js"></script>
 </body>
+<script src="code-challenges/array-circular-rotation/array-circular-rotation.js"></script>
 
 </html>
