added strings problems

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 
 <body>
 </body>
-<script src="code-challenges/minesweeper-problem/minesweeper-problem.js"></script>
+<script src="./10-days-challenge/day-1-strings/strings.js"></script>
 
 </html>
