--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
 </body>
-<script src="./10-days-challenge/day-1-strings/strings.js"></script>
+<!-- <script src="./10-days-challenge/day-1-strings/strings.js"></script> -->
+<script src="./datastructures/hash-table.js"></script>
 
 </html>
