Updated Tekion ques + added raghu prototype chaining

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
 <body>
 </body>
+<h1>Prototypal chaining</h1>
 <!-- <script src="./10-days-challenge/day-1-strings/strings.js"></script> -->
-<script src="./datastructures/hash-table.js"></script>
+<!-- <script src="./datastructures/hash-table.js"></script> -->
+<script src="./concepts//prototype-chaining-raghu.js"></script>
 
 </html>
